--- a/app/src/main/res/layout/activity_dcvschat.xml
+++ b/app/src/main/res/layout/activity_dcvschat.xml
@@ -8,6 +8,23 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="org.dcvs.nac.dcvsconnectwidget.Dcvschat"
-    android:background="@drawable/dcvschatbg">
+    android:background="@drawable/dcvschatbg3">
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/skypebtn"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:background="@drawable/dcvssinglebtn"
+        android:contentDescription="@string/skypecd" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/groupchatbtn"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/dcvsgroupbtn"
+        android:contentDescription="@string/groupcd" />
 </RelativeLayout>
