--- a/app/src/main/res/layout/activity_dcvsfun.xml
+++ b/app/src/main/res/layout/activity_dcvsfun.xml
@@ -7,6 +7,24 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="org.dcvs.nac.dcvsconnectwidget.Dcvsfun">
+    tools:context="org.dcvs.nac.dcvsconnectwidget.Dcvsfun"
+    android:background="@drawable/dcvsfunappbg4">
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/gamesbtn"
+        android:background="@drawable/dcvsgamesbtn2"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:contentDescription="@string/gamescd" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/internetbtn"
+        android:background="@drawable/dcvsinternetbtn2"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:contentDescription="@string/internetcd" />
 </RelativeLayout>
