--- a/app/src/main/res/layout/activity_dcvshelp.xml
+++ b/app/src/main/res/layout/activity_dcvshelp.xml
@@ -7,6 +7,24 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="org.dcvs.nac.dcvsconnectwidget.Dcvshelp">
+    tools:context="org.dcvs.nac.dcvsconnectwidget.Dcvshelp"
+    android:background="@drawable/dcvshelpappbg3">
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/remotebtn"
+        android:background="@drawable/dcvsremotebtn2"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:contentDescription="@string/remotecd" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/helpguidebtn"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/dcvshelpbtn"
+        android:contentDescription="@string/helpguidecd" />
 </RelativeLayout>
