--- a/app/src/main/res/layout/activity_dcvschat.xml
+++ b/app/src/main/res/layout/activity_dcvschat.xml
@@ -17,7 +17,8 @@
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:background="@drawable/dcvssinglebtn"
-        android:contentDescription="@string/skypecd" />
+        android:contentDescription="@string/skypecd"
+        android:onClick="skypeonclick" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -26,5 +27,6 @@
         android:layout_centerVertical="true"
         android:layout_alignParentEnd="true"
         android:background="@drawable/dcvsgroupbtn"
-        android:contentDescription="@string/groupcd" />
+        android:contentDescription="@string/groupcd"
+        android:onClick="googleonclick" />
 </RelativeLayout>
