--- a/app/src/main/res/layout/activity_dcvsfun.xml
+++ b/app/src/main/res/layout/activity_dcvsfun.xml
@@ -32,12 +32,15 @@
         android:onClick="internetonClick"
         android:src="@drawable/dcvsibtn" />
 
-    <Button
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Radio Button"
-        android:id="@+id/radioBTN"
+        android:id="@+id/radiobtn"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:onClick="radioonClick" />
+        android:src="@drawable/dcvsradiobtn"
+        android:background="#00ffffff"
+        android:onClick="radioonClick"
+        android:contentDescription="@string/radiocd" />
+
 </RelativeLayout>
