--- a/app/src/main/res/layout/activity_dcvschat.xml
+++ b/app/src/main/res/layout/activity_dcvschat.xml
@@ -17,7 +17,7 @@
         android:background="#00ffffff"
         android:contentDescription="@string/skypecd"
         android:onClick="skypeonclick"
-        android:src="@drawable/dcvsvideochat"
+        android:src="@drawable/dcvsrectskype"
         android:layout_marginStart="147dp"
         android:layout_below="@+id/dcvsoffice"
         android:layout_toEndOf="@+id/dcvsoffice"
@@ -30,7 +30,7 @@
         android:background="#00ffffff"
         android:contentDescription="@string/groupcd"
         android:onClick="googleonclick"
-        android:src="@drawable/dcvsgroupchat"
+        android:src="@drawable/dcvsrectgc"
         android:layout_alignTop="@+id/skypebtn"
         android:layout_toEndOf="@+id/skypebtn" />
 
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/dcvsv1"
-        android:src="@drawable/dcvscv1"
+        android:src="@drawable/dcvsrectcv1"
         android:background="#00ffffff"
         android:contentDescription="@string/skypev1"
         android:onClick="skypev1onclick"
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/dcvsv2"
         android:contentDescription="@string/skypev2"
-        android:src="@drawable/dcvscv2"
+        android:src="@drawable/dcvsrectcv2"
         android:background="#00ffffff"
         android:layout_alignTop="@+id/dcvsv1"
         android:layout_toEndOf="@+id/dcvsv1"
@@ -61,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/dcvsoffice"
-        android:src="@drawable/dcvscdo"
+        android:src="@drawable/dcvsrectdo"
         android:background="#00ffffff"
         android:layout_alignTop="@+id/dcvsv2"
         android:layout_toEndOf="@+id/dcvsv2"
