--- a/app/src/main/res/layout/activity_dcvshelp.xml
+++ b/app/src/main/res/layout/activity_dcvshelp.xml
@@ -19,7 +19,7 @@
         android:layout_alignParentStart="true"
         android:contentDescription="@string/remotecd"
         android:onClick="quicksupportclick"
-        android:src="@drawable/dcvsrhbtn" />
+        android:src="@drawable/dcvsrectquicksupport" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -30,5 +30,5 @@
         android:background="#00ffffff"
         android:contentDescription="@string/helpguidecd"
         android:onClick="helpguideonclick"
-        android:src="@drawable/dcvshgbtn" />
+        android:src="@drawable/dcvsrecthelpguide" />
 </RelativeLayout>
