--- a/app/src/main/res/layout/activity_dcvschat.xml
+++ b/app/src/main/res/layout/activity_dcvschat.xml
@@ -18,10 +18,8 @@
         android:contentDescription="@string/skypecd"
         android:onClick="skypeonclick"
         android:src="@drawable/dcvsrectskype"
-        android:layout_marginStart="147dp"
-        android:layout_below="@+id/dcvsoffice"
-        android:layout_toEndOf="@+id/dcvsoffice"
-        android:layout_marginTop="46dp" />
+        android:layout_above="@+id/dcvshelpdesk"
+        android:layout_alignParentStart="true" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -72,10 +70,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/dcvshelpdesk"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
         android:background="#00ffffff"
         android:src="@drawable/dcvscdhd"
         android:contentDescription="@string/skypedcvshelpdesk"
-        android:onClick="skypehelpdeskonclick" />
+        android:onClick="skypehelpdeskonclick"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/groupchatbtn"
+        android:layout_marginStart="286dp" />
 </RelativeLayout>
